# phylactery

./: .devcontainer.json  .gitignore  Cargo.toml  README.md  README.tpl  expand.rs
.github/workflows/: test.yml
.github/workspaces/: test.yml
examples/: cheat.rs  scoped_static_logger.rs  thread_spawn_bridge.rs
issues/: 01-redeem-missing-wake.md  02-memory-ordering-relaxed-decrement.md  03-combinations-incomplete-subsets.md  04-data-ref-unnecessary-result.md  05-missing-debug-for-lich.md  06-missing-must-use.md  07-undocumented-sentinel.md  08-incorrect-safety-comments.md  09-missing-no-std-ci-test.md  10-drop-in-place-no-destructor.md  11-transmute-fat-pointers.md  12-lich-missing-trait-impls.md  13-dead-match-arm-in-sever.md  14-fnonce-lich-uncallable.md  15-sever-unreachable-panic.md  16-soul-missing-trait-impls.md  17-addr-of-vs-reference-cast.md  18-struct-drop-order-deadlock.md  19-redundant-count-ref-in-drop.md  20-missing-test-coverage.md  issue_combinations_overflow.md  issue_dead_match_arms_sever.md  issue_decrement_debug_assertion.md  issue_deny_unsafe_op_in_unsafe_fn.md  issue_fnonce_shroud_unusable.md  issue_increment_ordering.md  issue_increment_panic_documentation.md  issue_lich_unpin_documentation.md  issue_lich_variance_analysis.md  issue_missing_safety_docs.md  issue_missing_test_coverage.md  issue_no_std_blocking_docs.md  issue_no_std_ci_test.md  issue_shroud_unsafe_trait.md  issue_soul_drop_blocking_during_panic.md  issue_syn_private_span.md  issue_transmute_to_as_cast.md
phylactery/: Cargo.toml  README.md  README.tpl
phylactery/examples/: scoped_static_logger.rs  thread_spawn_bridge.rs
phylactery/src/: atomic.rs  cell.rs  cell_bleh.rs  lib.rs  lich.rs  lock.rs  lock_bleh.rs  pointer.rs  raw.rs  shroud.rs  soul.rs  sync.rs
phylactery/tests/: binding.rs  core.rs  loom.rs  shroud.rs
phylactery_macro/: Cargo.toml
phylactery_macro/src/: lib.rs  shroud.rs
src/: atomic.rs  cell.rs  lib.rs  lock.rs  raw.rs  sever.rs  shroud.rs  unsafe.rs
tests/: cell.rs  core.rs  lock.rs  raw.rs  shroud.rs
