[package]
name = "phylactery"
version = "0.2.0"
edition = "2021"
authors = ["Magicolo <magicololand@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/phylactery/latest/checkito/"
description = "Safe and thin wrappers around lifetime extension. Given a trait `Trait` and a `T: Trait`, any `&'a T` can be split into a `Lich<dyn Trait + 'static>` and a `Soul<'a>` pair such that the `dyn Trait` can cross `'static` boundaries while tracking the lifetime `'a`."
license = "MIT"
repository = "https://github.com/Magicolo/phylactery"
keywords = []
categories = []
rust-version = "1.79"

[badges]
github = { repository = "Magicolo/phylactery", workflow = "test" }

[features]
default = ["cell", "lock"]
std = []
cell = ["std"]
lock = ["std"]

[dependencies]
rustversion = "1.0.22"
