[package]
name = "phylactery"
version = "0.5.0"
edition = "2021"
authors = ["Magicolo <magicololand@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/phylactery/latest/checkito/"
description = "Safe and thin wrappers around lifetime extension to allow non-static values to cross static boundaries."
license = "MIT"
repository = "https://github.com/Magicolo/phylactery"
keywords = ["unsafe", "lifetime", "scope", "extension", "static"]
categories = ["concurrency", "no-std", "data-structures", "memory-management"]
rust-version = "1.79"

[badges]
github = { repository = "Magicolo/phylactery", workflow = "test" }

[features]
default = ["cell", "lock", "atomic", "shroud"]
std = []
cell = ["std"]
lock = ["std"]
atomic = ["atomic-wait"]
shroud = ["phylactery_macro"]

[dependencies]
phylactery_macro = { version = "0.2.0", path = "../phylactery_macro", default-features = false, optional = true }
atomic-wait = { version = "1.1.0", optional = true, default-features = false }
