[package]
name = "phylactery"
version = "2.0.8"
edition = "2021"
authors = ["Magicolo <magicololand@gmail.com>"]
readme = "README.md"
documentation = "https://docs.rs/phylactery/latest/phylactery/"
description = "Safe and thin wrappers around lifetime extension to allow non-static values to cross static boundaries."
license = "MIT"
repository = "https://github.com/Magicolo/phylactery"
keywords = ["unsafe", "lifetime", "extension", "static", "pin"]
categories = ["concurrency", "no-std", "data-structures", "memory-management"]
rust-version = "1.75"

[badges]
github = { repository = "Magicolo/phylactery", workflow = "test" }

[features]
default = ["std", "shroud"]
std = []
shroud = ["phylactery_macro"]

[dependencies]
atomic-wait = { version = "1.1", default-features = false }
phylactery_macro = { version = "0.4", path = "../phylactery_macro", default-features = false, optional = true }
rustversion = "1.0"
