[package]
name = "phylactery_macro"
version = "0.4.5"
authors = ["Magicolo <magicololand@gmail.com>"]
edition = "2021"
documentation = "https://docs.rs/phylactery_macro/latest/phylactery_macro/"
description = "A set of macros to accompany the `phylactery` crate."
license = "MIT"
repository = "https://github.com/Magicolo/phylactery/phylactery_macro"
keywords = ["unsafe", "lifetime", "scope", "extension", "static"]
categories = ["concurrency", "no-std", "data-structures", "memory-management"]
rust-version = "1.75"

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.114", default-features = false, features = [
    "clone-impls",
    "proc-macro",
    "parsing",
    "full",
    "printing",
] }
quote = { version = "1.0.44", default-features = false }
